# ai-project-management

./: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  cookies.txt  login_response.txt
.claude/: settings.local.json
backend/: AGENTS.md  pyproject.toml
backend/app/: __init__.py  ai_chat_models.py  ai_client.py  db.py  kanban_models.py  kanban_repo.py  main.py
backend/app/static/: index.html
backend/tests/: test_ai_api.py  test_ai_chat_api.py  test_ai_chat_models.py  test_ai_client.py  test_api.py  test_db.py  test_docker_integration.py  test_kanban_api.py
docs/: CODE-REVIEW.md  PLAN.md  ai-structured-output-schema.md  database-schema.md  review.md
frontend/: AGENTS.md  vitest.config.ts
frontend/src/components/: KanbanBoard.test.tsx  KanbanBoard.tsx
frontend/src/lib/: boardApi.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-macos.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
