[project]
name = "pm-backend"
version = "0.1.0"
description = "Part 2 scaffold backend for Project Management MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=80 -m 'not integration'"
markers = [
  "integration: marks tests that require docker",
]
